# hotfix

./: .gitignore  README.md  build.gradle  gradle.properties  serve_patches.sh  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_bug.c
app/src/main/java/com/demo/app/: Calculator.kt  MainActivity.kt  NativeBug.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
hotfix-plugin/: build.gradle  settings.gradle
hotfix-plugin/src/main/kotlin/com/demo/hotfix/plugin/: HotfixClassVisitor.kt  HotfixClassVisitorFactory.kt  HotfixExtension.kt  HotfixInstrumentParams.kt  HotfixMethodVisitor.kt  HotfixPatchExtension.kt  HotfixPatchPlugin.kt  HotfixPlugin.kt  MethodId.kt  PatchOverrideGenerator.kt
hotfix-sdk/: build.gradle  consumer-rules.pro
hotfix-sdk/src/main/cpp/: CMakeLists.txt  inline_hook.c
hotfix-sdk/src/main/java/com/demo/hotfix/: Hotfix.kt  NativeHook.kt  PatchVerifySpec.kt
hotfix-sdk/src/main/java/com/demo/hotfix/core/: IpChange.kt  JavaPatcher.kt  PatchStore.kt  PatchesLoader.kt
hotfix-sdk/src/main/java/com/demo/hotfix/nativehook/: NativeHotfix.kt
hotfix-sdk/src/main/java/com/demo/hotfix/res/: ResourcePatcher.kt
patch-src/: AndroidManifest.xml  build.gradle
patch-src/cpp/: patch.c
patch-src/patched/com/demo/app/: Calculator.kt
patch-src/res_patch/values/: strings.xml
